# nexa-core

./: Cargo.toml  README.md  index.html
.github/workflows/: bench.yml
benches/: config_parsing.rs  scheduler.rs
dev/bench/: data.js
src/: config.rs  duration.rs  error.rs  lib.rs
src/domain/: health.rs  mod.rs  orchestrator.rs  restart.rs  scheduler.rs
src/domain/models/: deployment.rs  mod.rs  node.rs  pod.rs  project.rs  route.rs
src/models/: deployment.rs  mod.rs  pod.rs  project.rs
src/ports/: cluster.rs  dns.rs  metrics.rs  mod.rs  proxy.rs  route_store.rs  route_store_memory.rs  runtime.rs  secrets.rs  secrets_memory.rs  state.rs  state_memory.rs
src/runtime/: docker.rs  mod.rs  traits.rs
